--- a/app/globals.css
+++ b/app/globals.css
@@ -23,13 +23,13 @@ p {
 
 @layer utilities {
   .btn {
-    @apply text-white bg-secondaryColor px-5 py-2 font-cinzel uppercase font-normal text-[16px] smm:text-lg transition-colors hover:bg-[#5d3000];
+    @apply text-white bg-secondaryColor px-5 py-2 font-cinzel  border-[1px] border-solid border-secondaryColor uppercase font-normal text-[16px] smm:text-lg transition-colors hover:bg-[#5d3000];
   }
   .sec-btn {
     @apply text-bgColor bg-transparent border-[1px] border-solid border-bgColor px-5 py-2 font-cinzel uppercase font-normal text-[16px] smm:text-lg transition-colors;
   }
   .ghost {
-    @apply text-secondaryColor bg-transparent border-[1px] border-solid border-secondaryColor px-5 py-2 font-cinzel uppercase font-normal text-[16px] smm:text-lg transition-colors;
+    @apply text-secondaryColor bg-transparent border-[1px] border-solid border-secondaryColor px-5 py-2 font-cinzel uppercase font-normal text-[16px] smm:text-lg transition-colors duration-300 hover:text-white hover:bg-secondaryColor;
   }
   .acc {
     @apply text-secondaryColor;
