--- a/app/globals.css
+++ b/app/globals.css
@@ -89,3 +89,11 @@ p {
 .hide-scrollbar-x::-webkit-scrollbar {
   height: 0;
 }
+
+.scrollbar-none {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.scrollbar-none::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
